Changed home.html to index.html in files

--- a/personal.html
+++ b/personal.html
@@ -11,7 +11,7 @@
         <h1>Personal</h1>
         <nav>
             <ul>
-              <a href="./home.html">Home</a>
+              <a href="./index_home.html">Home</a>
               <a href="./projects.html">Projects</a>
               <a href="/resume.html">Resume</a>
               <a href="https://www.linkedin.com/in/rileyellis/" target="_blank">LinkedIn</a>
