--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
     <header>
         <h1>Riley Ellis's Resume</h1>
         <nav>
-            <a href="./home.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./projects.html">Projects</a>
             <!--<a href="./Personal.html">Personal</a> -->
             <a href="https://www.linkedin.com/in/rileyellis/" target="_blank">LinkedIn</a>
