--- a/Mobile Robot.html
+++ b/Mobile Robot.html
@@ -68,7 +68,7 @@
     <header>
         <h1>Mobile Robot</h1>
         <nav>
-            <a href="./home.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./projects.html">Projects</a>
             <!--<a href="./personal.html">Personal</a>-->
             <a href="./resume.html">Resume</a>
