--- a/combination-lock-solver.html
+++ b/combination-lock-solver.html
@@ -70,7 +70,7 @@
     <header>
         <h1>Combination Lock Solver</h1>
         <nav>
-            <a href="./home.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./projects.html">Projects</a>
             <!--<a href="./personal.html">Personal</a>-->
             <a href="./resume.html">Resume</a>
