--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
     <header>
         <h1>Riley's Projects</h1>
         <nav>
-            <a href="./home.html">Home</a>
+            <a href="./index.html">Home</a>
             <!--<a href="./demo_personal.html">Personal</a> -->
             <a href="./resume.html">Resume</a>
             <a href="https://www.linkedin.com/in/rileyellis/" target="_blank">LinkedIn</a>
