--- a/robot arm manipulator.html
+++ b/robot arm manipulator.html
@@ -69,7 +69,7 @@
     <header>
         <h1>Robot Arm Manipulator</h1>
         <nav>
-            <a href="./home.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./projects.html">Projects</a>
             <!--<a href="./personal.html">Personal</a>-->
             <a href="./resume.html">Resume</a>
