adding my github link

--- a/personal.html
+++ b/personal.html
@@ -15,6 +15,7 @@
               <a href="./projects.html">Projects</a>
               <a href="/resume.html">Resume</a>
               <a href="https://www.linkedin.com/in/rileyellis/" target="_blank">LinkedIn</a>
+              <a href="https://github.com/riley-ellis" target="_blank">GitHub</a>
             </ul>
           </nav>
     </header>
