--- a/resume.html
+++ b/resume.html
@@ -68,6 +68,7 @@
             <a href="./projects.html">Projects</a>
             <!--<a href="./Personal.html">Personal</a> -->
             <a href="https://www.linkedin.com/in/rileyellis/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/riley-ellis" target="_blank">GitHub</a>
         </nav>
     </header>
 
