--- a/Mobile Robot.html
+++ b/Mobile Robot.html
@@ -73,6 +73,7 @@
             <!--<a href="./personal.html">Personal</a>-->
             <a href="./resume.html">Resume</a>
             <a href="https://www.linkedin.com/in/rileyellis/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/riley-ellis" target="_blank">GitHub</a>
         </nav>
     </header>
 
