--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             -->
             <a href="./resume.html">Resume</a>
             <a href="https://www.linkedin.com/in/rileyellis/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/riley-ellis" target="_blank">GitHub</a>
         </nav>
     </header>
 
