--- a/Mobile Robot.html
+++ b/Mobile Robot.html
@@ -133,6 +133,26 @@
             <figcaption style="margin-bottom: 20px;">This prototype showcases the nuanced control achieved using the Nunchuk controller via Arduino for modulating motor speeds.</figcaption>
         </figure>
 
+        <h2>Third Prototype:</h2>
+        <figure>
+            <img src="./photos/robot car/Robot V3 Complete CAD.png" alt="CAD image of the third prototype" width="550" height="720">
+        </figure>
+        <p>For the third prototype, I have decreased its size and weight for better motor performance. Additionally, I have included IR sensors for wheel odometry, and a LiDAR sensor and IMU for localization and mapping. I continue to refine my skills with 3D CAD utilizing Fusion360.</p>
+
+        <figure>
+            <video width="480" height="360" controls>
+                <source src="https://drive.google.com/uc?export=download&id=1KAasAPdvvzfqYf70jcLshNK_KSo0ERDw" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </figure>
+        <p>Shortly after recording this video, I tested the performance of the vehicle with both a 9V battery and a 3-cell LiPo battery using the remote control mode. The 9V works pretty well, and the 3S LiPo is almost too powerful. I fear the high voltage could burn out my motors. I am considering including a voltage regulator to supply 8 volts to the motor controller since this is the highest recommended voltage for my motors.</p>
+
+        <figure>
+            <img src="./photos/robot car/assembled v3 minus lidar.jpg" alt="Assembled third prototype minus the LiDAR" width="550" height="720">
+        </figure>
+        <p>Next, I will integrate the GPS following mode and then assemble and test the LiDAR sensor.</p>
+
+
         <h2>Future Endeavors:</h2>
         <p>My aspirations encompass:</p>
         <ul>
