changed order of projects

--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,12 @@
 
     <section>
         <figure>
+            <a href="./Mobile Robot.html">
+                <img src="./photos/robot car/assembled v3 minus lidar.jpg" alt="Image of my Mobile Robot" width="450" height="720">
+                <figcaption>Mobile Robot</figcaption>
+            </a>
+        </figure>
+        <figure>
             <a href="./combination-lock-solver.html">
                 <img src="./photos/combo lock solver/combo lock solver.png" alt="Image of my Combination Lock Solver" width="450" height="720">
                 <figcaption>Combination Lock Solver</figcaption>
@@ -85,12 +91,6 @@
             <a href="./robot arm manipulator.html">
                 <img src="./photos/robot arm/arm position1.jpg" alt="Image of my Robot Arm Manipulator in Fusion360" width="450" height="720">
                 <figcaption>Robot Arm Manipulator</figcaption>
-            </a>
-        </figure>
-        <figure>
-            <a href="./Mobile Robot.html">
-                <img src="./photos/robot car/mobile robot.jpg" alt="Image of my Mobile Robot" width="450" height="720">
-                <figcaption>Mobile Robot</figcaption>
             </a>
         </figure>
     </section>
